cmake_minimum_required(VERSION 3.9)
project(pg_playback C)
set(CMAKE_C_STANDARD 11)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)

INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS})

LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS})
ADD_DEFINITIONS(${GTK3_CFLAGS_OTHER})

add_executable(pg_playback src/main.c)
TARGET_LINK_LIBRARIES(pg_playback ${GTK3_LIBRARIES})